# tesseract-plumbing

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  result_iterator.rs  tess_base_api.rs  text.rs
