[package]
name = "tesseract-plumbing"
version = "0.10.0"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"
description = "Safe wrapper of `tesseract-sys`"
homepage = "https://github.com/ccouzens/tesseract-plumbing"
repository = "https://github.com/ccouzens/tesseract-plumbing"
readme = "README.md"
keywords = ["leptonica", "tesseract", "ocr", "image"]
license = "MIT"
[dependencies]
tesseract-sys = "~0.5"
leptonica-plumbing = "1.0"
thiserror = "1.0"

[dev-dependencies]
image = "0.23.14"

[features]
default = ["full"]
full = ["tesseract_5_2"]
tesseract_5_2 = []